about-us tailwind edition

--- a/index.html
+++ b/index.html
@@ -76,33 +76,33 @@
   <!-- About us section starts here -->
 
   <section id="about_container"
-    class="h-full p-[10px] flex flex-col bg-gradient-to-b from-[rgba(128,139,196,0)] to-[rgba(94,109,187,0.9)]">
+    class="h-[100vh] p-[10px] flex flex-col bg-gradient-to-b from-[rgba(128,139,196,0)] to-[rgba(94,109,187,0.9)]">
     <div
       class="w-[22%] h-[50px] flex justify-center items-center border-[6px] border-[rgba(54, 63, 140, 1)] border-solid my-[2.5%] mx-auto">
-      <h3 class="text-[20px]">About us</h3>
+      <h3 class="text-[clamp(10px,3vw,20px)]">About us</h3>
     </div>
     <div class="flex items-center justify-around w-full p-0 m-0">
-      <div class="w-[40%] h-[100%] ">
-        <div>
-          <h3>Mission Statement:</h3>
-          <p>
+      <div class="w-[40%] h-[100%] relative">
+        <div class="leading-[clamp(25px,4vw,50px)] mt-[30px] w-full">
+          <h3 class="font-bold text-[clamp(12px,3vw,20px)]">Mission Statement:</h3>
+          <p class="text-[clamp(12px,3vw,20px)]">
             Creating an enabling environment <br />
             that bring about a behavioral change to self reliance
           </p>
         </div>
-        <div>
-          <h3>Vision Statement:</h3>
-          <p>
+        <div class="leading-[clamp(25px,4vw,50px)] mt-[30px] w-full">
+          <h3 class="font-bold text-[clamp(12px,3vw,20px)]">Vision Statement:</h3>
+          <p class="text-[clamp(12px,3vw,20px)]">
             Developing a total child <br />
             who is able to attain the ultimate height in life.
           </p>
         </div>
       </div>
       <div class="h-auto border-[6px] border-solid border-[rgba(54, 63, 140, 100%)] rounded-bl-[16px] rounded-br-16px">
-        <video controls poster="./legacydocs/videos/propritress cover img.jpg" class="w-[300px] h-[400px]">
+        <video controls poster="./legacydocs/videos/propritress cover img.jpg" class="w-[clamp(150px,30vw,300px)] h-[clamp(200px,40vw,390px)]">
           <source src="./legacydocs/videos/speech.mp4" type="video/mp4" />
         </video>
-        <div>
+        <div class="justify-center items-center text-[clamp(15px,4vw,18px)] w-full h-[50px] text-white flex text-center bg-[rgba(54, 63, 140, 1)] rounded-bl-[10px] rounded-br-[10px]">
           <h5>Mrs. M.k ADAMA<br />(PROPRIETRESS)</h5>
         </div>
       </div>
