staff section tailwindcss edit

--- a/index.html
+++ b/index.html
@@ -76,29 +76,29 @@
   <!-- About us section starts here -->
 
   <section id="about_container"
-    class="h-[100vh] p-[10px] flex flex-col bg-gradient-to-b from-[rgba(128,139,196,0)] to-[rgba(94,109,187,0.9)]">
+    class="h-[100dvh] p-[10px] flex flex-col bg-gradient-to-b from-[rgba(128,139,196,0)] to-[rgba(94,109,187,0.9)]">
     <div
-      class="w-[22%] h-[50px] flex justify-center items-center border-[6px] border-[rgba(54, 63, 140, 1)] border-solid my-[2.5%] mx-auto">
+      class="w-[22%] h-[50px] flex justify-center items-center border-[6px] border-blue-900 border-solid my-[2.5%] mx-auto">
       <h3 class="text-[clamp(10px,3vw,20px)]">About us</h3>
     </div>
     <div class="flex items-center justify-around w-full p-0 m-0">
       <div class="w-[40%] h-[100%] relative">
         <div class="leading-[clamp(25px,4vw,50px)] mt-[30px] w-full">
-          <h3 class="font-bold text-[clamp(12px,3vw,20px)]">Mission Statement:</h3>
+          <h3 class="font-bold text-[clamp(12px,3vw,20px) border-b-[6px] border-blue-900">Mission Statement:</h3>
           <p class="text-[clamp(12px,3vw,20px)]">
             Creating an enabling environment <br />
             that bring about a behavioral change to self reliance
           </p>
         </div>
         <div class="leading-[clamp(25px,4vw,50px)] mt-[30px] w-full">
-          <h3 class="font-bold text-[clamp(12px,3vw,20px)]">Vision Statement:</h3>
+          <h3 class="font-bold text-[clamp(12px,3vw,20px)] border-b-[6px] border-blue-900">Vision Statement:</h3>
           <p class="text-[clamp(12px,3vw,20px)]">
             Developing a total child <br />
             who is able to attain the ultimate height in life.
           </p>
         </div>
       </div>
-      <div class="h-auto border-[6px] border-solid border-[rgba(54, 63, 140, 100%)] rounded-bl-[16px] rounded-br-16px">
+      <div class="h-auto border-[6px] border-solid border-blue-900 rounded-bl-[16px] rounded-br-16px">
         <video controls poster="./legacydocs/videos/propritress cover img.jpg" class="w-[clamp(150px,30vw,300px)] h-[clamp(200px,40vw,390px)]">
           <source src="./legacydocs/videos/speech.mp4" type="video/mp4" />
         </video>
@@ -111,42 +111,42 @@
 
   <!-- Staff section starts here -->
 
-  <section id="staff_container">
-    <h2>MEET OUR STAFF</h2>
-    <div>
-      <h6>
+  <section id="staff_container" class="w-full h-[100vh] bg-pink-900">
+    <h2 class="my-[3%] mx-auto text-[clamp(18px,4vw,40px)] text-center font-fantasy font-bold">MEET OUR STAFF</h2>
+    <div class="w-[80%] mx-auto bg-[rgba(54,63,140,66%)] p-3 mb-10 justify-center hidden sm:flex">
+      <h6 class="text-white text-[clamp(5px,3vw,16px)] whitespace-nowrap font-serif text-center">
         Meet the passionate and dedicated Admin staff committed to excellence
       </h6>
     </div>
-    <div>
-      <figure>
-        <img src="legacydocs/staffs_img/staff11.jpg" alt="" />
+    <div class="flex flex-wrap items-center justify-evenly content-center max-1167:grid max-1167:grid-cols-3 ">
+      <figure class="w-[15%] p-[5px] bg-[rgba(54,63,140,66%)] mt-[5%] mr-[2%] mb-[0] ml-[1%] max-1167:w-[clamp(30%,40vw,70%)]">
+        <img src="legacydocs/staffs_img/staff11.jpg" alt="" class="w-full h-[200px] max-w-full max-h-full max-1167:h-[clamp(80px,40vw,170px)]"/>
         <figcaption>
-          <p>Mr. Emmanuel Okereke<br />(PRINCIPAL)</p>
+          <p class="max-1167:text-[clamp(7px,2vw,16px)]">Mr. Emmanuel Okereke<br />(PRINCIPAL)</p>
         </figcaption>
       </figure>
-      <figure>
-        <img src="legacydocs/staffs_img/staff22.png" alt="" />
+      <figure class="w-[15%] p-[5px] bg-[rgba(54,63,140,66%)] mt-[5%] mr-[2%] mb-[0] ml-[1%] max-1167:w-[clamp(30%,40vw,70%)]">
+        <img src="legacydocs/staffs_img/staff22.png" alt="" class="w-full h-[200px] max-w-full max-h-full max-1167:h-[clamp(80px,40vw,170px)]"/>
         <figcaption>
-          <p>Mrs. Majin Gloria<br />(ADMIN PERSONNEL)</p>
+          <p class="max-1167:text-[clamp(7px,2vw,16px)]">Mrs. Majin Gloria<br />(ADMIN PERSONNEL)</p>
         </figcaption>
       </figure>
-      <figure>
-        <img src="legacydocs/staffs_img/staff66.png" alt="" />
+      <figure class="w-[15%] p-[5px] bg-[rgba(54,63,140,66%)] mt-[5%] mr-[2%] mb-[0] ml-[1%] max-1167:w-[clamp(30%,40vw,70%)]">
+        <img src="legacydocs/staffs_img/staff66.png" alt="" class="w-full h-[200px] max-w-full max-h-full max-1167:h-[clamp(80px,40vw,170px)]"/>
         <figcaption>
-          <p>Mrs. Damilola Sunmola<br />(VICE PRINCIPAL)</p>
+          <p  class="max-1167:text-[clamp(7px,2vw,16px)]">Mrs. Damilola Sunmola<br />(VICE PRINCIPAL)</p>
         </figcaption>
       </figure>
-      <figure>
-        <img src="legacydocs/staffs_img/staff33.png" alt="" />
+      <figure class="w-[15%] p-[5px] bg-[rgba(54,63,140,66%)] mt-[5%] mr-[2%] mb-[0] ml-[1%] max-1167:w-[clamp(30%,40vw,70%)]">
+        <img src="legacydocs/staffs_img/staff33.png" alt="" class="w-full h-[200px] max-w-full max-h-full max-1167:h-[clamp(80px,40vw,170px)]"/>
         <figcaption>
-          <p>Mrs. Ayeni Olufunke<br />(H.M ACADEMICS)</p>
+          <p class="max-1167:text-[clamp(7px,2vw,16px)]">Mrs. Ayeni Olufunke<br />(H.M ACADEMICS)</p>
         </figcaption>
       </figure>
-      <figure>
-        <img src="legacydocs/staffs_img/staff55.png" alt="" />
+      <figure class="w-[15%] p-[5px] bg-[rgba(54,63,140,66%)] mt-[5%] mr-[2%] mb-[0] ml-[1%] max-1167:w-[clamp(30%,40vw,70%)]">
+        <img src="legacydocs/staffs_img/staff55.png" alt="" class="w-full h-[200px] max-w-full max-h-full max-1167:h-[clamp(80px,40vw,170px)]"/>
         <figcaption>
-          <p>Mrs. Mayowa Ojelade<br />(H.M ADMIN)</p>
+          <p class="max-1167:text-[clamp(7px,2vw,16px)]">Mrs. Mayowa Ojelade<br />(H.M ADMIN)</p>
         </figcaption>
       </figure>
     </div>
@@ -154,7 +154,7 @@
   <!-- staff section Ends here -->
 
   <!-- Project Display starts here -->
-
+  
   <section id="Explore-project-section">
     <div>
       <h2>Explore</h2>
