explore the project section

--- a/index.html
+++ b/index.html
@@ -76,12 +76,12 @@
   <!-- About us section starts here -->
 
   <section id="about_container"
-    class="h-[100dvh] p-[10px] flex flex-col bg-gradient-to-b from-[rgba(128,139,196,0)] to-[rgba(94,109,187,0.9)]">
+    class="h-[100vh] p-[10px] flex flex-col bg-gradient-to-b from-[rgba(128,139,196,0)] to-[rgba(94,109,187,0.9)]">
     <div
-      class="w-[22%] h-[50px] flex justify-center items-center border-[6px] border-blue-900 border-solid my-[2.5%] mx-auto">
+      class="w-[22%] h-[50px] flex justify-center items-center border-[6px] border-blue-900 border-solid my-[2.5%] mx-auto mt-[50px]">
       <h3 class="text-[clamp(10px,3vw,20px)]">About us</h3>
     </div>
-    <div class="flex items-center justify-around w-full p-0 m-0">
+    <div class="flex items-center justify-around w-full p-0 mt-[100px] sm:mt-[50px]">
       <div class="w-[40%] h-[100%] relative">
         <div class="leading-[clamp(25px,4vw,50px)] mt-[30px] w-full">
           <h3 class="font-bold text-[clamp(12px,3vw,20px) border-b-[6px] border-blue-900">Mission Statement:</h3>
@@ -98,7 +98,7 @@
           </p>
         </div>
       </div>
-      <div class="h-auto border-[6px] border-solid border-blue-900 rounded-bl-[16px] rounded-br-16px">
+      <div class="h-auto border-[6px] border-solid border-blue-900 rounded-bl-[16px] rounded-br-16px ">
         <video controls poster="./legacydocs/videos/propritress cover img.jpg" class="w-[clamp(150px,30vw,300px)] h-[clamp(200px,40vw,390px)]">
           <source src="./legacydocs/videos/speech.mp4" type="video/mp4" />
         </video>
@@ -111,14 +111,14 @@
 
   <!-- Staff section starts here -->
 
-  <section id="staff_container" class="w-full h-[100vh] bg-pink-900">
-    <h2 class="my-[3%] mx-auto text-[clamp(18px,4vw,40px)] text-center font-fantasy font-bold">MEET OUR STAFF</h2>
+  <section id="staff_container" class="w-full h-[90vh]">
+    <h2 class="my-[3%] mx-auto text-[clamp(18px,4vw,40px)] text-center font-bold mt-[70px]">MEET OUR STAFF</h2>
     <div class="w-[80%] mx-auto bg-[rgba(54,63,140,66%)] p-3 mb-10 justify-center hidden sm:flex">
       <h6 class="text-white text-[clamp(5px,3vw,16px)] whitespace-nowrap font-serif text-center">
         Meet the passionate and dedicated Admin staff committed to excellence
       </h6>
     </div>
-    <div class="flex flex-wrap items-center justify-evenly content-center max-1167:grid max-1167:grid-cols-3 ">
+    <div class="flex flex-wrap items-center justify-evenly content-center max-1167:grid max-1167:grid-cols-3 mt-[70px]">
       <figure class="w-[15%] p-[5px] bg-[rgba(54,63,140,66%)] mt-[5%] mr-[2%] mb-[0] ml-[1%] max-1167:w-[clamp(30%,40vw,70%)]">
         <img src="legacydocs/staffs_img/staff11.jpg" alt="" class="w-full h-[200px] max-w-full max-h-full max-1167:h-[clamp(80px,40vw,170px)]"/>
         <figcaption>
@@ -155,28 +155,27 @@
 
   <!-- Project Display starts here -->
   
-  <section id="Explore-project-section">
-    <div>
-      <h2>Explore</h2>
-      <h4>OUR NEXT TERM PROJECTS</h4>
+  <section class="w-full bg-gradient-to-b from-[rgba(128,139,196,0)] to-[rgba(94,109,187,0.9)] min-h-screen flex flex-col items-center px-6">
+    <div class="bg-[#7b75b8] text-white px-10 text-center mb-12 mt-[100px] sm:mt-[70px] md:mt-[50px]">
+      <h2 class="text-[clamp(24px,4vw,40px)] font-bold tracking-[10px]">Explore</h2>
+      <h4 class="text-[clamp(10px,2vw,20px)] font-light leading-[40px] tracking-[4px] whitespace-nowrap">OUR NEXT TERM PROJECTS</h4>
     </div>
-    <div>
-      <div>
-        <video controls poster="./legacydocs/videos/PRI PROJECT.jpg">
-          <source src="./legacydocs/videos/tollgate.mp4" />
+    <div class="w-full max-w-7xl grid grid-cols-3 gap-[clamp(12px,4vw,40px)] mt-5">
+      <div class="relative w-full aspect-[9/16] rounded-lg overflow-hidden max-h-[60vh] max-w-[80%]">
+        <video controls poster="./legacydocs/videos/PRI PROJECT.jpg"  class="absolute inset-0 w-full h-full object-cover">
+          <source src="./legacydocs/videos/tollgate.mp4" type="video/mp4" />
         </video>
       </div>
-      <div>
-        <video loop controls poster="./legacydocs/videos/JS PROJECT POSTER.jpg">
-          <source src="./legacydocs/videos/WastebinEdited.mp4" />
+      <div class="relative w-full aspect-[9/16] rounded-lg overflow-hidden max-h-[60vh] max-w-[80%]">
+        <video loop controls poster="./legacydocs/videos/JS PROJECT POSTER.jpg" class="absolute inset-0 w-full h-full object-cover">
+          <source src="./legacydocs/videos/WastebinEdited.mp4" type="video/mp4" />
         </video>
       </div>
-      <div>
-        <video controls loop class="jproject project" poster="./legacydocs/videos/SS PROJECT POSTER.jpg">
-          <source src="" />
+      <div class="relative w-full aspect-[9/16] rounded-lg overflow-hidden max-h-[60vh] max-w-[80%]">
+        <video controls loop poster="./legacydocs/videos/SS PROJECT POSTER.jpg" class="absolute inset-0 w-full h-full object-cover">
+          <source src="./legacydocs/videos/WastebinEdited.mp4" type="video/mp4" />
         </video>
       </div>
-    </div>
     </div>
   </section>
   <!-- project display stops here -->
