gallaery edit using tailwind

--- a/index.html
+++ b/index.html
@@ -182,16 +182,16 @@
 
   <!-- OUR GALARY STRUCTURE BEGIN -->
 
-  <section id="gallery">
-    <h1>OUR GALLERY</h1>
+  <section>
+    <h1 class="flex items-center justify-center text-[50px] mt-[70px]">OUR GALLERY</h1>
     </div>
-    <div>
-      <img src="./legacydocs/studentimg/SSC2.jpg" />
-      <img src="./legacydocs/studentimg/SSC3.png" />
-      <img src="./legacydocs/studentimg/JS1.jpg" />
-      <img src="./legacydocs/studentimg/JS2.jpg" />
-      <img src="./legacydocs/studentimg/pri_img_2-removebg-preview.png" alt="" />
-      <img src="./legacydocs/studentimg/PRI_PROJECT_PIX-removebg-preview.png" alt="" />
+    <div class="grid grid-cols-3 grid-rows-3 gap-y-[2px] gap-x-[10px] p-[10px]">
+      <img src="./legacydocs/studentimg/SSC2.jpg" class="w-full h-[155px] m-0 max-w-full max-h-full bg-cover col-start-1 col-end-3 border-[6px] border-solid border-[rgb(255,0,0)]"/>
+      <img src="./legacydocs/studentimg/SSC3.png" class="w-full h-[155px] m-0 max-w-full max-h-full bg-cover col-start-3 col-end-4 border-[6px] border-solid border-[rgb(0,0,255)]"/>
+      <img src="./legacydocs/studentimg/JS1.jpg"  class="w-full h-[155px] m-0 max-w-full max-h-full bg-cover col-start-1 col-end-2 border-[6px] border-solid border-[rgb(128,0,128)]"/>
+      <img src="./legacydocs/studentimg/JS2.jpg"  class="w-full h-[155px] m-0 max-w-full max-h-full bg-cover col-start-2 col-end-4 border-[6px] border-solid border-[rgb(173,216,230)]"/>
+      <img src="./legacydocs/studentimg/pri_img_2-removebg-preview.png" class="w-full h-[155px] m-0 max-w-full max-h-full bg-cover col-start-1 col-end-3 border-[6px] border-solid border-[rgb(0,0,0)]" />
+      <img src="./legacydocs/studentimg/PRI_PROJECT_PIX-removebg-preview.png" class="w-full h-[155px] m-0 max-w-full max-h-full bg-cover col-start-3 col-end-4 border-[6px] border-solid border-[rgb(255,0,0)]" />
     </div>
   </section>
 
