--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
 <body id="root" class="w-full min-h-screen p-0 m-0 font-poppins overflow-x-hidden">
   <!-- HEADER SECTION, CONTAIN NAV BAR AND LOGO-->
 
-  <header class="w-full h-full">
+  <header>
     <nav id="nav1"
-      class="bg-[rgba(126,170,250,0.788)] h-[40px] w-full text-white flex justify-between items-center pl-[30px] pr-[20px] text-[15px]">
+      class="bg-[rgba(126,170,250,0.788)] text-white flex justify-between items-center text-[15px] ">
       <!-- child div for the first nav  -->
       <div class="flex gap-4">
         <!-- working hours -->
@@ -34,15 +34,15 @@
       <!-- for further enquiries -->
       <div class="flex gap-4">
         <a href=""><i class="fa-brands fa-facebook fa"></i></a>
-        <a href=""><i class="fa-brands fa-instagram fa"></i></a>
+        <a href=""><i  m t="fa-brands fa-instagram fa"></i></a>
         <a href=""><i class="fa-brands fa-retweet fa"></i></a>
         <a href=""><i class="fa-brands fa-linkedin fa"></i></a>
       </div>
     </nav>
-    <nav class="bg-[rgba(28,4,167,0.849)] text-white h-[30px] w-full flex items-center justify-between">
+    <nav class="bg-[rgba(28,4,167,0.849)] text-white flex items-center justify-between">
       <!-- logo -->
       <div>
-        <img src="legacydocs/studentimg/LEGACY VILLA.jpg" alt="logo" class="ml-[50px] mt-[3px] h-8 w-8 rounded-[20px] [@media(max-width:927px)]:w-[28px] h-[28px]" id="logo"  />
+        <img src="legacydocs/studentimg/LEGACY VILLA.jpg" alt="logo" class="ml-[50px] mt-[3px] h-8 w-8 rounded-[20px]" id="logo"  />
       </div>
 
       <div>
@@ -63,11 +63,11 @@
   <!---START OF MAIN SECTION, THE LANDING PAGE-->
 
   <main id="homePage"
-    class="bg-cover bg-center bg-no-repeat flex items-center justify-center min-h-[88vh] md:min-h-[88.3vh] bg-[url('../others/LVSEXPOSURE2dark.jpg')] h-[40vh]">
+    class="bg-cover bg-center bg-no-repeat flex items-center justify-center min-h-[88vh] md:min-h-[88.3vh] bg-[url('../others/LVSEXPOSURE2dark.jpg')]">
     <div
-      class="flex flex-col items-center justify-center px-6 py-8 rounded-[20px] bg-gradient-to-b from-[rgba(128,139,196,0)] to-[rgba(94,109,187,0.9)] text-white tracking-[0.15em]">
+      class="flex flex-col items-center justify-center h-[80px] rounded-[20px] bg-gradient-to-b from-[rgba(128,139,196,0)] to-[rgba(94,109,187,0.9)] text-white tracking-[0.15em]">
       <h1
-        class="font-bold text-center text-[clamp(12px,3vw,28px)] text-[rgba(241,233,233,0.9)] [text-shadow:4px_4px_8px_rgba(194,86,86,0.6)] whitespace-nowrap leading-none">
+        class="font-bold text-center text-[clamp(12px,3vw,28px)] whitespace-nowrap leading-none">
         <span>Welcome To </span>Legacy Villa High School
       </h1>
       <p class="text-center text-[clamp(10px,2.5vw,20px)] font-thin mt-2 whitespace-nowrap"><span
@@ -78,7 +78,7 @@
   <!-- About us section starts here -->
 
   <section id="about_container"
-    class="h-[100vh] p-[10px] flex flex-col bg-gradient-to-b from-[rgba(128,139,196,0)] to-[rgba(94,109,187,0.9)]">
+    class="flex flex-col bg-gradient-to-b from-[rgba(128,139,196,0)] to-[rgba(94,109,187,0.9)]">
     <div
       class="w-[22%] h-[50px] flex justify-center items-center border-[6px] border-blue-900 border-solid my-[2.5%] mx-auto mt-[50px]">
       <h3 class="text-[clamp(10px,3vw,20px)] font-bold">About us</h3>
@@ -171,7 +171,7 @@
   <!-- Project Display starts here -->
 
   <section
-    class="w-full bg-gradient-to-b from-[rgba(128,139,196,0)] to-[rgba(94,109,187,0.9)] min-h-screen flex flex-col items-center px-6">
+    class="w-full bg-gradient-to-b from-[rgba(128,139,196,0)] to-[rgba(94,109,187,0.9)] flex flex-col items-center px-6">
     <div class="bg-[#7b75b8] text-white px-10 text-center mb-12 mt-[100px] sm:mt-[70px] md:mt-[50px]">
       <h2 class="text-[clamp(24px,4vw,40px)] font-bold tracking-[10px]">Explore</h2>
       <h4 class="text-[clamp(10px,2vw,20px)] font-light leading-[40px] tracking-[4px] whitespace-nowrap">OUR NEXT TERM
@@ -224,7 +224,7 @@
   <!-- FOOTER SECTION LSTART HERE -->
 
   <section id="footer"
-    class="h-[60vh] w-full mt-[20%] bg-gradient-to-t from-[rgba(54,63,140,0.5)] to-[rgba(16,3,129,0.719)] flex flex-col items-center justify-center text-white [@media(max-width:487px)]:h-[60%]">
+    class=" w-full mt-[20%] bg-gradient-to-t from-[rgba(54,63,140,0.5)] to-[rgba(16,3,129,0.719)] flex flex-col items-center justify-center text-white [@media(max-width:487px)]:h-[60%]">
     <div class="w-full h-[90%] flex flex-col items-center justify-center ">
       <div
         class="flex flex-row w-full h-[30%] mt-[10px] bg-gradient-to-t from-[rgba(54,63,140,0.5)] to-[rgba(16,3,129,0.5)] [@media(max-width:487px)]:bg-none justify-evenly rounded-[10px] items-center [@media(max-width:487px)]:flex-col [@media(max-width:487px)]:h-[50vh] [@media(max-width:487px)]:items-start [@media(max-width:487px)]:h-[70%] [@media(max-width:487px)]:mt-[40px] [@media(max-width:658px)]:gap-[15px] [@media(max-width:487px)]:w-[80%]">
